--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.networknt</groupId>
     <artifactId>light-websocket-4j</artifactId>
-    <version>2.1.34-SNAPSHOT</version>
+    <version>2.3.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Parent POM</name>
     <description>Light 4J Framework WebSocket Components</description>
@@ -47,59 +47,63 @@
     </licenses>
 
     <scm>
-        <connection>scm:git://github.com:networknt/light-rest-4j.git</connection>
-        <developerConnection>scm:git://github.com:networknt/light-rest-4j.git</developerConnection>
-        <url>https://github.com:networknt/light-rest-4j.git</url>
+        <connection>scm:git://github.com:networknt/light-websocket-4j.git</connection>
+        <developerConnection>scm:git://github.com:networknt/light-websocket-4j.git</developerConnection>
+        <url>https://github.com:networknt/light-websocket-4j.git</url>
     </scm>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
         <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>central</id>
+            <url>https://central.sonatype.com/service/local/staging/deploy/maven2/</url>
         </repository>
+        <snapshotRepository>
+            <id>central</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
 
     <repositories>
         <repository>
-            <id>central</id>
-            <url>
-                https://oss.sonatype.org/content/repositories/releases
-            </url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>snapshots</id>
-            <url>
-                https://oss.sonatype.org/content/repositories/snapshots
-            </url>
-            <snapshots>
-                <enabled>true</enabled>
-                <!-- never, daily, interval:X (where X is in minutes) or always -->
-                <!--<updatePolicy>daily</updatePolicy> -->
-            </snapshots>
+            <id>snapshot</id>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.light-4j>2.1.34-SNAPSHOT</version.light-4j>
-        <version.slf4j>2.0.9</version.slf4j>
+        <version.light-4j>2.3.2-SNAPSHOT</version.light-4j>
+        <version.slf4j>2.0.17</version.slf4j>
         <version.commons-text>1.3</version.commons-text>
-        <version.logback>1.4.14</version.logback>
+        <version.logback>1.5.18</version.logback>
         <version.junit>4.13.2</version.junit>
-        <version.undertow>2.3.10.Final</version.undertow>
+        <version.commons.codec>1.18.0</version.commons.codec>
+        <version.undertow>2.3.22.Final</version.undertow>
         <versions.maven-version>2.4</versions.maven-version>
         <version.maven-javadoc>3.4.1</version.maven-javadoc>
     </properties>
@@ -182,6 +186,12 @@
                 <groupId>io.undertow</groupId>
                 <artifactId>undertow-core</artifactId>
                 <version>${version.undertow}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${version.commons.codec}</version>
+                <scope>compile</scope>
             </dependency>
 
             <!-- Test dependencies -->
