--- a/websocket-router/pom.xml
+++ b/websocket-router/pom.xml
@@ -6,19 +6,13 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-websocket-4j</artifactId>
-        <version>2.1.34-SNAPSHOT</version>
+        <version>2.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>websocket-router</artifactId>
     <packaging>jar</packaging>
-    <description>//TODO</description>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <description>websocket router</description>
 
     <dependencies>
         <dependency>
