--- a/websocket-session/pom.xml
+++ b/websocket-session/pom.xml
@@ -6,20 +6,13 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-websocket-4j</artifactId>
-        <version>2.1.34-SNAPSHOT</version>
+        <version>2.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>websocket-session</artifactId>
     <packaging>jar</packaging>
-    <description>//TODO</description>
-
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.codec>1.15</version.codec>
-    </properties>
+    <description>websocket session</description>
 
     <dependencies>
         <dependency>
@@ -37,7 +30,6 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>${version.codec}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
