--- a/websocket-handler/pom.xml
+++ b/websocket-handler/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.networknt</groupId>
         <artifactId>light-websocket-4j</artifactId>
+        <groupId>com.networknt</groupId>
         <version>2.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>websocket-router</artifactId>
+    <artifactId>websocket-handler</artifactId>
     <packaging>jar</packaging>
-    <description>websocket router</description>
+    <description>websocket handler</description>
 
     <dependencies>
         <dependency>
@@ -21,28 +21,36 @@
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
-            <artifactId>websocket-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.networknt</groupId>
             <artifactId>handler-config</artifactId>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>handler</artifactId>
-            <version>2.3.2-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
-            <artifactId>router-config</artifactId>
+            <artifactId>service</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.networknt</groupId>
-            <artifactId>cluster</artifactId>
+            <artifactId>utility</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.undertow</groupId>
             <artifactId>undertow-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
