fixes #3 Update schema for websocket-router to include enabled

--- a/websocket-router/src/main/resources/config/websocket-router.yaml
+++ b/websocket-router/src/main/resources/config/websocket-router.yaml
@@ -1,3 +1,5 @@
 # Light websocket router configuration
+# Enable WebSocket Router Handler
+enabled: ${websocket-router.enabled:true}
 # Map of path prefix to serviceId for routing purposes when service_id header is missing.
 pathPrefixService: ${websocket-router.pathPrefixService:}
