--- a/websocket-session/pom.xml
+++ b/websocket-session/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-websocket-4j</artifactId>
-        <version>2.3.2-SNAPSHOT</version>
+        <version>2.3.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
