--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,8 @@
         <versions.maven-version>2.4</versions.maven-version>
         <version.javadoc-packagelist-plugin>1.0.0</version.javadoc-packagelist-plugin>
         <version.maven-javadoc>3.4.1</version.maven-javadoc>
+        <version.nexus-staging-maven>1.7.0</version.nexus-staging-maven>
+        <version.maven-gpg>3.2.7</version.maven-gpg>
     </properties>
 
     <modules>
