--- a/websocket-transmission-echo/pom.xml
+++ b/websocket-transmission-echo/pom.xml
@@ -10,6 +10,9 @@
     </parent>
 
     <artifactId>websocket-transmission-echo</artifactId>
+    <packaging>jar</packaging>
+    <name>websocket-transmission-echo</name>
+    <description>websocket transmission echo</description>
 
     <dependencies>
         <dependency>
