--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
             </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
+                <artifactId>handler</artifactId>
+                <version>${version.light-4j}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
                 <artifactId>client</artifactId>
                 <version>${version.light-4j}</version>
             </dependency>
