--- a/websocket-transmission-echo/pom.xml
+++ b/websocket-transmission-echo/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.networknt</groupId>
         <artifactId>light-websocket-4j</artifactId>
-        <version>2.3.3-SNAPSHOT</version>
+        <version>2.3.3</version>
     </parent>
 
     <artifactId>websocket-transmission-echo</artifactId>
