--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
         <version.slf4j>2.0.17</version.slf4j>
         <version.commons-text>1.15.0</version.commons-text>
         <version.logback>1.5.26</version.logback>
-        <version.junit>4.13.2</version.junit>
+        <version.junit>5.11.4</version.junit>
         <version.commons.codec>1.18.0</version.commons.codec>
         <version.undertow>2.3.22.Final</version.undertow>
         <versions.maven-version>2.4</versions.maven-version>
@@ -217,8 +217,8 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
                 <version>${version.junit}</version>
                 <scope>test</scope>
             </dependency>
@@ -296,20 +296,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.1</version>
-                        <scope>compile</scope>
-                    </dependency>
-                </dependencies>
+                <version>3.5.2</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.5.2</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -449,7 +441,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>3.5.2</version>
             </plugin>
         </plugins>
     </reporting>
