--- a/websocket-router/pom.xml
+++ b/websocket-router/pom.xml
@@ -45,8 +45,8 @@
             <artifactId>undertow-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
